@@ -1,6 +1,7 @@
 LITT Changelog:
 ===============
 
+ * 2019-08-29: No need for m_endOfOption after last change!
  * 2019-08-28: OptionParser now allows empty option values (like -c) and separators at the end (=> eof).
  * 2019-08-28: OptionParser now uses std::string instead of std::stringstream.
  * 2019-08-28: OutputQuery now uses std::string instead of std::stringstream for building query.
